package ru.student.vehiclecli;

/**
 * Application launcher.
 */
public final class Main {
    private Main() {
    }

    public static void main(String[] args) {
        new ConsoleApp().run();
    }
}


