package ru.student.vehiclecli.model;

/**
 * Fuel type.
 */
public enum FuelType {
    ELECTRICITY,
    DIESEL,
    MANPOWER,
    NUCLEAR
}


