package ru.student.vehiclecli.model;

/**
 * Vehicle type.
 */
public enum VehicleType {
    CAR,
    SUBMARINE,
    MOTORCYCLE,
    CHOPPER
}


